hotfix tablet, spacing, alignment issues

--- a/packages/navigate-theme/src/styles/base/_utilities.scss
+++ b/packages/navigate-theme/src/styles/base/_utilities.scss
@@ -475,7 +475,7 @@
       z-index: 90;
 
       @include respond(tablet) {
-        height: 30rem;
+        height: 34rem;
       }
 
       @include respond(phone) {
