--- a/packages/navigate-theme/src/styles/components/_booking-form.scss
+++ b/packages/navigate-theme/src/styles/components/_booking-form.scss
@@ -71,6 +71,7 @@
 
     @include respond(tablet) {
       font-size: 2rem;
+      padding-right: 6.5rem;
     }
 
     @include respond(phone) {
@@ -924,6 +925,10 @@
     @include respond(phone) {
       font-size: 1.2rem;
       padding-top: 0.6rem;
+    }
+
+    @include respond(tablet) {
+      padding-top: 0;
     }
   }
 
