--- a/packages/navigate-theme/src/styles/components/_reviews.scss
+++ b/packages/navigate-theme/src/styles/components/_reviews.scss
@@ -14,7 +14,7 @@
   }
 
   @include respond(tablet) {
-    margin-top: 0rem;
+    margin-top: 2rem;
   }
 
   @include respond(phone) {
